--- a/package.json
+++ b/package.json
@@ -1,27 +1,12 @@
 {
-  "name": "yamljs",
+  "name": "pumlhorse-yamljs",
   "version": "0.2.7",
-  "description": "Standalone JavaScript YAML 1.2 Parser & Encoder. Works under node.js and all major browsers. Also brings command line YAML/JSON conversion tools.",
-  "keywords": [
-    "yaml",
-    "json",
-    "yaml2json",
-    "json2yaml"
-  ],
-  "author": "Jeremy Faivre <contact@jeremyfa.com>",
+  "description": "Forked version of yamljs to add line numbers",
+  "author": "Matt Dickinson <matt@mdickin.com>",
   "main": "./lib/Yaml.js",
   "dependencies": {
     "argparse": "^0.1.15",
     "glob": "^4.0.0"
-  },
-  "devDependencies": {
-    "coffeeify": "^0.7.0",
-    "benchmark": "^1.0.0",
-    "jasmine-node": "^1.14.5"
-  },
-  "bin": {
-    "yaml2json": "./bin/yaml2json",
-    "json2yaml": "./bin/json2yaml"
   },
   "scripts": {
     "test": "cake build; cake test"
@@ -29,6 +14,6 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/jeremyfa/yaml.js.git"
+    "url": "git://github.com/mdickin/yaml.js.git"
   }
 }
